--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,23 @@
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
-    
-    <body>
-        <form method="POST"> 
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username"> 
-            <!-- id for style, name="username" to refer to  run.py-->
-            <button>Go to chat!</button>
-        </form>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Chat page </title>
+</head>
+
+<head>
+    <title>Home Page</title>
+</head>
+
+<body>
+    <form method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <button>Go to chat!</button>
+    </form>
+</body>
+
 </html>
